Add ST logo to navigation and favicon

--- a/godaddy-deployment/index.html
+++ b/godaddy-deployment/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>StyleTally — Your AI Style Companion</title>
-<link rel="icon" type="image/svg+xml" href="logo.svg">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,300;1,400&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 <style>
@@ -46,20 +45,12 @@
   }
 
   .nav-logo {
-    display: flex;
-    align-items: center;
-    gap: 12px;
     font-family: var(--serif);
     font-size: 22px;
     font-weight: 600;
     letter-spacing: 0.01em;
     color: var(--ink);
     text-decoration: none;
-  }
-
-  .nav-logo img {
-    height: 32px;
-    width: auto;
   }
 
   .nav-links {
@@ -874,10 +865,7 @@
 
 <!-- NAV -->
 <nav>
-  <a href="#" class="nav-logo" onclick="showPage('home')">
-    <img src="logo.svg" alt="StyleTally Logo">
-    StyleTally
-  </a>
+  <a href="#" class="nav-logo" onclick="showPage('home')">StyleTally</a>
   <ul class="nav-links">
     <li><a href="#features" onclick="showPage('home')">Features</a></li>
     <li><a href="#how" onclick="showPage('home')">How it works</a></li>
