Update logo to PNG format

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>StyleTally — Your AI Style Companion</title>
-<link rel="icon" type="image/svg+xml" href="logo.svg">
+<link rel="icon" type="image/png" href="logo.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,300;1,400&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 <style>
@@ -875,7 +875,7 @@
 <!-- NAV -->
 <nav>
   <a href="#" class="nav-logo" onclick="showPage('home')">
-    <img src="logo.svg" alt="StyleTally Logo">
+    <img src="logo.png" alt="StyleTally Logo">
     StyleTally
   </a>
   <ul class="nav-links">
