Add separate privacy and terms pages with clean URLs

--- a/index.html
+++ b/index.html
@@ -1123,8 +1123,8 @@
       <div>
         <div class="footer-col-title">Legal</div>
         <ul class="footer-links">
-          <li><a href="#" onclick="showPage('privacy')">Privacy Policy</a></li>
-          <li><a href="#" onclick="showPage('terms')">Terms of Service</a></li>
+          <li><a href="/privacy">Privacy Policy</a></li>
+          <li><a href="/terms">Terms of Service</a></li>
         </ul>
       </div>
     </div>
@@ -1242,8 +1242,8 @@
     <div class="footer-bottom" style="border-top:1px solid rgba(255,255,255,0.08); padding-top:32px">
       <div class="footer-copy">© 2025 StyleTally. All rights reserved.</div>
       <div style="display:flex;gap:24px">
-        <a href="#" onclick="showPage('home')" style="color:rgba(247,244,239,0.4);font-size:13px;text-decoration:none">Home</a>
-        <a href="#" onclick="showPage('terms')" style="color:rgba(247,244,239,0.4);font-size:13px;text-decoration:none">Terms of Service</a>
+        <a href="/" style="color:rgba(247,244,239,0.4);font-size:13px;text-decoration:none">Home</a>
+        <a href="/terms" style="color:rgba(247,244,239,0.4);font-size:13px;text-decoration:none">Terms of Service</a>
       </div>
     </div>
   </footer>
@@ -1354,8 +1354,8 @@
     <div class="footer-bottom" style="border-top:1px solid rgba(255,255,255,0.08); padding-top:32px">
       <div class="footer-copy">© 2025 StyleTally. All rights reserved.</div>
       <div style="display:flex;gap:24px">
-        <a href="#" onclick="showPage('home')" style="color:rgba(247,244,239,0.4);font-size:13px;text-decoration:none">Home</a>
-        <a href="#" onclick="showPage('privacy')" style="color:rgba(247,244,239,0.4);font-size:13px;text-decoration:none">Privacy Policy</a>
+        <a href="/" style="color:rgba(247,244,239,0.4);font-size:13px;text-decoration:none">Home</a>
+        <a href="/privacy" style="color:rgba(247,244,239,0.4);font-size:13px;text-decoration:none">Privacy Policy</a>
       </div>
     </div>
   </footer>
