--- a/terms.html
+++ b/terms.html
@@ -241,17 +241,63 @@
   <h2>13. Account Termination</h2>
   <p>We reserve the right to suspend or terminate your account if you violate these Terms of Service. You may delete your account at any time from within the app settings. Upon deletion, all your personal data will be permanently removed within 30 days.</p>
 
-  <h2>14. Disclaimers and Limitation of Liability</h2>
-  <p>StyleTally is provided "as is" without warranties of any kind. We do not guarantee that the service will be uninterrupted, error-free, or that results will be accurate. To the fullest extent permitted by law, StyleTally shall not be liable for any indirect, incidental, or consequential damages arising from your use of the app.</p>
+  <h2>14. Third-Party Services and Links</h2>
+  <p>StyleTally may contain links to third-party websites, services, or content that are not owned or controlled by us. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party websites or services. You acknowledge and agree that StyleTally shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with the use of or reliance on any such content, goods, or services available on or through any such third-party websites or services.</p>
 
-  <h2>15. Changes to Terms</h2>
-  <p>We may update these Terms of Service at any time. We will notify you of material changes by updating the date at the top of this page. Your continued use of StyleTally after changes constitutes acceptance of the revised terms.</p>
+  <h2>15. Indemnification</h2>
+  <p>You agree to defend, indemnify, and hold harmless StyleTally, its officers, directors, employees, contractors, agents, licensors, and suppliers from and against any claims, liabilities, damages, judgments, awards, losses, costs, expenses, or fees (including reasonable legal fees) arising out of or relating to your violation of these Terms of Service or your use of StyleTally, including but not limited to your User Content, any use of the app's content, services, and products other than as expressly authorized in these Terms.</p>
 
-  <h2>16. Governing Law</h2>
-  <p>These Terms of Service are governed by the laws of England and Wales. Any disputes shall be subject to the exclusive jurisdiction of the courts of England and Wales.</p>
+  <h2>16. Disclaimers and Limitation of Liability</h2>
+  <p><strong>No Warranties:</strong> StyleTally is provided on an "AS IS" and "AS AVAILABLE" basis. We make no warranties, expressed or implied, and hereby disclaim and negate all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.</p>
+  <p><strong>Service Availability:</strong> We do not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on StyleTally or otherwise relating to such materials or on any sites linked to this app. We do not guarantee that the app will be uninterrupted, timely, secure, or error-free.</p>
+  <p><strong>Limitation of Liability:</strong> In no event shall StyleTally or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use StyleTally, even if StyleTally or a StyleTally authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.</p>
+  <p><strong>Maximum Liability:</strong> To the maximum extent permitted by applicable law, in no event will StyleTally's total liability to you for all damages, losses, and causes of action exceed the amount you have paid StyleTally in the last six (6) months, or one hundred pounds (£100), whichever is greater.</p>
 
-  <h2>17. Contact</h2>
-  <p>For any questions about these terms, contact us at <a href="mailto:legal@style-tally.com" style="color:var(--accent)">legal@style-tally.com</a>.</p>
+  <h2>17. Arbitration and Class Action Waiver</h2>
+  <p><strong>Binding Arbitration:</strong> Any dispute, controversy, or claim arising out of or relating to these Terms or the breach, termination, enforcement, interpretation, or validity thereof, including the determination of the scope or applicability of this agreement to arbitrate, shall be determined by arbitration in England and Wales before one arbitrator. The arbitration shall be administered by a recognized arbitration body in accordance with their rules.</p>
+  <p><strong>Class Action Waiver:</strong> You and StyleTally agree that any proceedings to resolve disputes will be conducted only on an individual basis and not in a class, consolidated, or representative action. You and StyleTally expressly waive any right to file a class action or seek relief on a class basis.</p>
+  <p><strong>Exception for Small Claims:</strong> Notwithstanding the foregoing, either party may bring a claim in small claims court in lieu of arbitration if the claim is within the jurisdiction of the small claims court and proceeds on an individual (non-class) basis.</p>
+
+  <h2>18. Force Majeure</h2>
+  <p>StyleTally shall not be liable for any failure to perform its obligations under these Terms where such failure results from any cause beyond StyleTally's reasonable control, including, without limitation, mechanical, electronic, or communications failure or degradation, acts of God, war, terrorism, riots, civil unrest, pandemic, strikes, or governmental actions.</p>
+
+  <h2>19. Severability</h2>
+  <p>If any provision of these Terms is found to be unenforceable or invalid under any applicable law, such unenforceability or invalidity shall not render these Terms unenforceable or invalid as a whole. Such provisions shall be deleted without affecting the remaining provisions herein.</p>
+
+  <h2>20. Waiver</h2>
+  <p>The failure of StyleTally to enforce any right or provision of these Terms will not be considered a waiver of those rights. The waiver of any such right or provision will be effective only if in writing and signed by a duly authorized representative of StyleTally. Except as expressly set forth in these Terms, the exercise by either party of any of its remedies under these Terms will be without prejudice to its other remedies under these Terms or otherwise.</p>
+
+  <h2>21. Entire Agreement</h2>
+  <p>These Terms of Service, together with our Privacy Policy, constitute the entire agreement between you and StyleTally regarding your use of the app and supersede all prior and contemporaneous written or oral agreements between you and StyleTally. You may be subject to additional terms and conditions that apply when you use affiliate or third-party services, third-party content, or third-party software.</p>
+
+  <h2>22. Assignment</h2>
+  <p>These Terms, and any rights and licenses granted hereunder, may not be transferred or assigned by you, but may be assigned by StyleTally without restriction. Any attempted transfer or assignment by you in violation hereof shall be null and void.</p>
+
+  <h2>23. Export Control</h2>
+  <p>You may not use, export, import, or transfer StyleTally except as authorized by English law, the laws of the jurisdiction in which you obtained StyleTally, and any other applicable laws. In particular, but without limitation, StyleTally may not be exported or re-exported into any country subject to trade embargoes or to anyone on lists of prohibited or restricted parties.</p>
+
+  <h2>24. Electronic Communications</h2>
+  <p>By using StyleTally, you consent to receiving electronic communications from us. These electronic communications may include notices about applicable fees and charges, transactional information, and other information concerning or related to StyleTally. You agree that any notices, agreements, disclosures, or other communications that we send to you electronically will satisfy any legal communication requirements, including that such communications be in writing.</p>
+
+  <h2>25. Updates to the App</h2>
+  <p>We may from time to time provide updates, enhancements, or improvements to the features/functionality of StyleTally, which may include patches, bug fixes, updates, upgrades, and other modifications ("Updates"). Updates may modify or delete certain features and/or functionalities. You agree that StyleTally has no obligation to provide any Updates or to continue to provide or enable any particular features and/or functionalities.</p>
+
+  <h2>26. Changes to Terms</h2>
+  <p>We may update these Terms of Service at any time. We will notify you of material changes by updating the date at the top of this page and, where appropriate, by providing additional notice (such as adding a statement to our homepage or sending you a notification through the app). Your continued use of StyleTally after changes constitutes acceptance of the revised terms. If you do not agree to the new terms, please stop using StyleTally.</p>
+
+  <h2>27. Governing Law and Jurisdiction</h2>
+  <p>These Terms of Service are governed by and construed in accordance with the laws of England and Wales, without regard to its conflict of law provisions. You agree to submit to the personal and exclusive jurisdiction of the courts located in England and Wales for the resolution of any disputes.</p>
+
+  <h2>28. Contact Information</h2>
+  <p>For any questions about these Terms of Service, please contact us at:</p>
+  <p>
+    Email: <a href="mailto:legal@style-tally.com" style="color:var(--accent)">legal@style-tally.com</a><br>
+    StyleTally Legal Department<br>
+    United Kingdom
+  </p>
+
+  <h2>29. Acknowledgment</h2>
+  <p>BY USING STYLETALLY OR OTHER SERVICES PROVIDED BY US, YOU ACKNOWLEDGE THAT YOU HAVE READ THESE TERMS OF SERVICE AND AGREE TO BE BOUND BY THEM.</p>
 </div>
 
 <footer>
